--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
 .chatPane {
   flex: 3;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   overflow: hidden;
 }
 
