--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
 
 /* HOME PAGE */
 
-#chatPage, #loginPage, #avatarPickerPage {
+#chatPage, #loginPage, #avatarPickerPage, #newRoomPage {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -57,7 +57,7 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
   display: none;  /* initially hidden */
 }
 
-#newGroupButton {
+#newRoomButton {
   position: absolute;
   left: var(--plg);
   bottom: var(--plg);
@@ -69,12 +69,17 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
   font-size: larger;
 }
 
-#newGroupButton:hover{
+#newRoomButton:hover{
   background-color: var(--color-bubble-sent-darker);
 }
 
 #loginPage {
   display: flex;  /* initially visible */
+  align-items: center;
+  justify-content: center;
+}
+
+#newRoomPage {
   align-items: center;
   justify-content: center;
 }
@@ -193,6 +198,7 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
   padding-top: var(--psm);
   padding-bottom: var(--psm);
   cursor: pointer;
+  border-bottom: 1px solid #2a3942;
 }
 
 #chatsList .chat.active {
@@ -317,6 +323,20 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
   visibility: hidden;  /* initial state */
 }
 
+.newRoomCard {
+  max-width: 450px;
+}
+
+.newRoomCard .hint {
+  width: 100%;
+  display: flex;
+  align-content: end;
+  justify-content: end;
+  padding-top: var(--psm);
+  font-size: 1.2rem;
+  visibility: hidden;  /* initial state */
+}
+
 .doodleBackground {
   /* generator https://doodad.dev/pattern-generator/ */
   background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='19.63' height='34' viewBox='0 0 34.64101615137755 60' patternUnits='userSpaceOnUse' patternTransform='rotate(136)'%3E%3Crect width='100%25' height='100%25' fill='rgba(10, 16, 20,1)'/%3E%3Cpath d='M36.37 39L36.37 41L32.91 39L34.64 38L34.64 42L32.91 41L34.64 40z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M19.05 49L19.05 51L15.59 49L17.32 48L17.32 52L15.59 51L17.32 50z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M1.73 39L1.73 41L-1.73 39L0 38L0 42L-1.73 41L0 40z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M1.73 19L1.73 21L-1.73 19L0 18L0 22L-1.73 21L0 20z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M19.05 9L19.05 11L15.59 9L17.32 8L17.32 12L15.59 11L17.32 10z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M36.37 19L36.37 21L32.91 19L34.64 18L34.64 22L32.91 21L34.64 20z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3Cpath d='M34.64 40L34.64 40L34.64 40L34.64 40L34.64 40L34.64 40L34.64 40z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M17.32 50L17.32 50L17.32 50L17.32 50L17.32 50L17.32 50L17.32 50z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M0 40L0 40L0 40L0 40L0 40L0 40L0 40z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M0 20L0 20L0 20L0 20L0 20L0 20L0 20z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M17.32 10L17.32 10L17.32 10L17.32 10L17.32 10L17.32 10L17.32 10z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M34.64 20L34.64 20L34.64 20L34.64 20L34.64 20L34.64 20L34.64 20z' stroke-linejoin='miter' fill='rgba(32, 44, 51,1)'/%3E%3Cpath d='M17.32 30L17.32 30L17.32 30L17.32 30L17.32 30L17.32 30L17.32 30z' stroke-linejoin='miter' fill='rgba(0, 92, 75,0.4)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
@@ -381,6 +401,10 @@ html { box-sizing: border-box; height: 100%; font-size: 10px; }
 }
 
 #usernameInput{
+  margin-top: var(--psm);
+}
+
+#newRoomInput{
   margin-top: var(--psm);
 }
 
